navbar contains github link

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="index">Home</a></li>
+        <li><a href="https://github.com/impromptu-sunset/WordFlow">GitHub</a></li>
         <li><a ng-hide="isAuthenticated()" ui-sref="signup">Signup</a></li>
         <li><a ng-hide="isAuthenticated()" ui-sref="login">Login</a></li>
         <li><a ng-show="isAuthenticated()" href="#" ng-click="logout()">Logout</a></li>
