--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <meta charset="utf-8"/>
-   <title>Impromptu Sunset</title>
+   <title>WordFlow</title>
    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
    <link rel="stylesheet" type="text/css" href="styles/profile-results.css" />
