(feat) add real-time WPM counter

--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -56,7 +56,7 @@
                 <td class="user-circle-box" id="{{myUser.username}}-user-circle-box">
                 </td>
                 <td class="user-text-box" id="{{myUser.username}}-user-text-box">
-                  <span class="user-text-span my-user-text-span" id="{{myUser.username}}-user-text-span">{{myUser.username}}</span>
+                  <span class="user-text-span my-user-text-span" id="{{myUser.username}}-user-text-span">{{myUser.username}} WPM: {{myUser.WPM}}</span>
                 </td>
               </tr>
             </tbody>
